# coding_principles

./: .gitignore  README.md
BadCalculator/: CMakeLists.txt  complex.cpp  complex.h  int_add.cpp  int_add.h  main.cpp  number.h  stringtonumberconverterfactory.cpp  stringtonumberconverterfactory.h
